--- a/requirements.txt
+++ b/requirements.txt
@@ -19,5 +19,6 @@ python-dateutil==2.8.2
 requests==2.28.2
 requests-oauthlib==1.3.1
 six==1.16.0
+tomli==2.0.1
 typing_extensions==4.5.0
 urllib3==1.26.14
