--- a/config_global.toml
+++ b/config_global.toml
@@ -7,6 +7,7 @@ PoolVMSku = 'STANDARD_A2_V2' # https://azure.microsoft.com/en-us/pricing/details
 [DataGeneration]
 SampleJsonFilePath = 'SampleJSON.json'
 PythonRunFilePath = 'main/GenerateData.py'
+ConfigFilePath = 'config_user.toml'
 
 
 [PythonCommands]
@@ -26,13 +27,13 @@ VMSetup.commands = ['echo "sudo apt update && sudo apt upgrade -y"'
             ,'curl -sS https://bootstrap.pypa.io/get-pip.py | python3.11'
 
             #Download code artifacts from github
-            ,'curl -H "Authorization: token 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" -H "Accept: application/octet-stream" https://github.com/bretamyers/EventHub-Throughput-Generator/archive/master.zip -L -o /mnt/batch/tasks/shared/EventHub-Throughput-Generator.zip'
+            ,'curl -H "Accept: application/octet-stream" https://github.com/bretamyers/EventHub-Throughput-Generator/archive/master.zip -L -o /mnt/batch/tasks/shared/EventHub-Throughput-Generator.zip'
             ,'unzip -o /mnt/batch/tasks/shared/EventHub-Throughput-Generator.zip -d /mnt/batch/tasks/shared/EventHub-Throughput-Generator'
             
             #Install requirement python packages
             ,'python3.11 -m pip install -r /mnt/batch/tasks/shared/EventHub-Throughput-Generator/EventHub-Throughput-Generator-main/requirements.txt'
         ] 
-CodeSetup.commands = ['curl -H "Authorization: token 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" -H "Accept: application/octet-stream" https://github.com/bretamyers/EventHub-Throughput-Generator/archive/master.zip -L -o /mnt/batch/tasks/shared/EventHub-Throughput-Generator.zip'
+CodeSetup.commands = ['curl -H "Accept: application/octet-stream" https://github.com/bretamyers/EventHub-Throughput-Generator/archive/master.zip -L -o /mnt/batch/tasks/shared/EventHub-Throughput-Generator.zip'
             ,'rm -r /mnt/batch/tasks/shared/EventHub-Throughput-Generator'
             ,'unzip /mnt/batch/tasks/shared/EventHub-Throughput-Generator.zip -d /mnt/batch/tasks/shared/EventHub-Throughput-Generator'
             ,'cd /mnt/batch/tasks/shared/EventHub-Throughput-Generator/EventHub-Throughput-Generator-main/'
