--- a/config_global.toml
+++ b/config_global.toml
@@ -1,5 +1,5 @@
 [AzureBatch]
-PoolNameBase = 'pool' #namming convention is {PoolNameBase}-{PoolVMSku}-{PoolVMSpotInstanceCount + PoolVMDedicatedInstanceCount}-{TaskSlotsPerTask}
+PoolNameBase = 'pool3' #namming convention is {PoolNameBase}-{PoolVMSku}-{PoolVMSpotInstanceCount + PoolVMDedicatedInstanceCount}-{TaskSlotsPerTask}
 TaskSlotsPerTask = 1 
 PoolVMSku = 'STANDARD_A2_V2' # https://azure.microsoft.com/en-us/pricing/details/batch/
 DropPoolOnCompletionFlag = 'true'
@@ -13,6 +13,7 @@ ConfigFilePath = 'config_user_local.toml'
 [PythonCommands]
 VMSetup.commands = ['echo "sudo apt update && sudo apt upgrade -y"'
             ,'sudo apt update && sudo apt upgrade -y'
+            ,'sudo apt install unzip'
             
             #Install python 3.11
             ,'sudo add-apt-repository ppa:deadsnakes/ppa -y'
@@ -26,18 +27,47 @@ VMSetup.commands = ['echo "sudo apt update && sudo apt upgrade -y"'
             ,'curl -sS https://bootstrap.pypa.io/get-pip.py | python3.11'
 
             #Download code artifacts from github
+            ,'sudo rm -rf /mnt/batch/tasks/shared/EventHub-Throughput-Generator.zip'
             ,'sudo rm -rf /mnt/batch/tasks/shared/EventHub-Throughput-Generator'
-            ,'git clone https://github.com/bretamyers/EventHub-Throughput-Generator /mnt/batch/tasks/shared/EventHub-Throughput-Generator'
-            
+            ,'curl -H "Accept: application/octet-stream" https://github.com/bretamyers/EventHub-Throughput-Generator/archive/master.zip -L -o /mnt/batch/tasks/shared/EventHub-Throughput-Generator.zip'
+            ,'unzip -o /mnt/batch/tasks/shared/EventHub-Throughput-Generator.zip -d /mnt/batch/tasks/shared/EventHub-Throughput-Generator'
+
             #Install requirement python packages
-            ,'python3.11 -m pip install -r /mnt/batch/tasks/shared/EventHub-Throughput-Generator/requirements.txt'
+            ,'python3.11 -m pip install -r /mnt/batch/tasks/shared/EventHub-Throughput-Generator/EventHub-Throughput-Generator-main/requirements.txt'
         ] 
 CodeSetup.commands = ['rm -rf /mnt/batch/tasks/shared/EventHub-Throughput-Generator'
-            ,'git clone https://github.com/bretamyers/EventHub-Throughput-Generator /mnt/batch/tasks/shared/EventHub-Throughput-Generator'
+            ,'unzip -o /mnt/batch/tasks/shared/EventHub-Throughput-Generator.zip -d /mnt/batch/tasks/shared/EventHub-Throughput-Generator'
             ,'cd /mnt/batch/tasks/shared/EventHub-Throughput-Generator/EventHub-Throughput-Generator-main/'
             #Install requirement python packages
             ,'python3.11 -m pip install -r /mnt/batch/tasks/shared/EventHub-Throughput-Generator/EventHub-Throughput-Generator-main/requirements.txt'
         ]
+# VMSetup.commands = ['echo "sudo apt update && sudo apt upgrade -y"'
+#             ,'sudo apt update && sudo apt upgrade -y'
+            
+#             #Install python 3.11
+#             ,'sudo add-apt-repository ppa:deadsnakes/ppa -y'
+#             ,'echo "sudo apt install python3.11 -y"'
+#             ,'sudo apt install python3.11 -y'
+#             ,'sudo apt update'
+
+#             #Install pip for python 3.11
+#             ,'echo "sudo apt-get install -y python3-pip"'
+#             ,'sudo apt-get install -y python3-pip'
+#             ,'curl -sS https://bootstrap.pypa.io/get-pip.py | python3.11'
+
+#             #Download code artifacts from github
+#             ,'sudo rm -rf /mnt/batch/tasks/shared/EventHub-Throughput-Generator'
+#             ,'git clone https://github.com/bretamyers/EventHub-Throughput-Generator /mnt/batch/tasks/shared/EventHub-Throughput-Generator'
+            
+#             #Install requirement python packages
+#             ,'python3.11 -m pip install -r /mnt/batch/tasks/shared/EventHub-Throughput-Generator/requirements.txt'
+#         ] 
+# CodeSetup.commands = ['rm -rf /mnt/batch/tasks/shared/EventHub-Throughput-Generator'
+#             ,'git clone https://github.com/bretamyers/EventHub-Throughput-Generator /mnt/batch/tasks/shared/EventHub-Throughput-Generator'
+#             ,'cd /mnt/batch/tasks/shared/EventHub-Throughput-Generator'
+#             #Install requirement python packages
+#             ,'python3.11 -m pip install -r /mnt/batch/tasks/shared/EventHub-Throughput-Generator/requirements.txt'
+#         ]
 PythonRunFilePath = 'main/GenerateData.py'
 
 
