--- a/config_global.toml
+++ b/config_global.toml
@@ -46,33 +46,35 @@ CodeSetup.commands = ['rm -rf /mnt/batch/tasks/shared/EventHub-Throughput-Genera
             #Install requirement python packages
             ,'python3.11 -m pip install -r /mnt/batch/tasks/shared/EventHub-Throughput-Generator/EventHub-Throughput-Generator-main/requirements.txt'
         ]
-# VMSetup.commands = ['echo "sudo apt update && sudo apt upgrade -y"'
-#             ,'sudo apt update && sudo apt upgrade -y'
-            
-#             #Install python 3.11
-#             ,'sudo add-apt-repository ppa:deadsnakes/ppa -y'
-#             ,'echo "sudo apt install python3.11 -y"'
-#             ,'sudo apt install python3.11 -y'
-#             ,'sudo apt update'
 
-#             #Install pip for python 3.11
-#             ,'echo "sudo apt-get install -y python3-pip"'
-#             ,'sudo apt-get install -y python3-pip'
-#             ,'curl -sS https://bootstrap.pypa.io/get-pip.py | python3.11'
-
-#             #Download code artifacts from github
-#             ,'sudo rm -rf /mnt/batch/tasks/shared/EventHub-Throughput-Generator'
-#             ,'git clone https://github.com/bretamyers/EventHub-Throughput-Generator /mnt/batch/tasks/shared/EventHub-Throughput-Generator'
+VMSetup.commandsGit = ['echo "sudo apt update && sudo apt upgrade -y"'
+            ,'sudo apt update && sudo apt upgrade -y'
             
-#             #Install requirement python packages
-#             ,'python3.11 -m pip install -r /mnt/batch/tasks/shared/EventHub-Throughput-Generator/requirements.txt'
-#         ] 
-# CodeSetup.commands = ['rm -rf /mnt/batch/tasks/shared/EventHub-Throughput-Generator'
-#             ,'git clone https://github.com/bretamyers/EventHub-Throughput-Generator /mnt/batch/tasks/shared/EventHub-Throughput-Generator'
-#             ,'cd /mnt/batch/tasks/shared/EventHub-Throughput-Generator'
-#             #Install requirement python packages
-#             ,'python3.11 -m pip install -r /mnt/batch/tasks/shared/EventHub-Throughput-Generator/requirements.txt'
-#         ]
+            #Install python 3.11
+            ,'sudo add-apt-repository ppa:deadsnakes/ppa -y'
+            ,'echo "sudo apt install python3.11 -y"'
+            ,'sudo apt install python3.11 -y'
+            ,'sudo apt update'
+
+            #Install pip for python 3.11
+            ,'echo "sudo apt-get install -y python3-pip"'
+            ,'sudo apt-get install -y python3-pip'
+            ,'curl -sS https://bootstrap.pypa.io/get-pip.py | python3.11'
+
+            #Download code artifacts from github
+            ,'sudo rm -rf /mnt/batch/tasks/shared/EventHub-Throughput-Generator'
+            ,'git clone https://github.com/bretamyers/EventHub-Throughput-Generator /mnt/batch/tasks/shared/EventHub-Throughput-Generator'
+            
+            #Install requirement python packages
+            ,'python3.11 -m pip install -r /mnt/batch/tasks/shared/EventHub-Throughput-Generator/requirements.txt'
+        ] 
+CodeSetup.commandsGit = ['rm -rf /mnt/batch/tasks/shared/EventHub-Throughput-Generator'
+            ,'git clone https://github.com/bretamyers/EventHub-Throughput-Generator /mnt/batch/tasks/shared/EventHub-Throughput-Generator'
+            ,'cd /mnt/batch/tasks/shared/EventHub-Throughput-Generator'
+            #Install requirement python packages
+            ,'python3.11 -m pip install -r /mnt/batch/tasks/shared/EventHub-Throughput-Generator/requirements.txt'
+        ]
+        
 PythonRepoPath = '/mnt/batch/tasks/shared/EventHub-Throughput-Generator/EventHub-Throughput-Generator-main'
 PythonProgramFilePath = 'main/GenerateData.py'
 
