--- a/config_global.toml
+++ b/config_global.toml
@@ -5,7 +5,7 @@ PoolVMSku = 'STANDARD_A2_V2' # https://azure.microsoft.com/en-us/pricing/details
 Publisher="microsoft-azure-batch"
 Offer="ubuntu-server-container"
 Sku="20-04-lts"
-DropPoolOnCompletionFlag = 'false'
+DropPoolOnCompletionFlag = 'true'
 
 
 [DataGeneration]
@@ -74,7 +74,7 @@ CodeSetup.commandsGit = ['rm -rf /mnt/batch/tasks/shared/EventHub-Throughput-Gen
             #Install requirement python packages
             ,'python3.11 -m pip install -r /mnt/batch/tasks/shared/EventHub-Throughput-Generator/requirements.txt'
         ]
-        
+
 PythonRepoPath = '/mnt/batch/tasks/shared/EventHub-Throughput-Generator/EventHub-Throughput-Generator-main'
 PythonProgramFilePath = 'main/GenerateData.py'
 
