--- a/.gitignore
+++ b/.gitignore
@@ -9,5 +9,6 @@ Batch/common/__pycache__
 config_global.toml
 config_user.toml
 config_user_local.toml
+config_user_global.toml
 main/Batch/common/__pycache__
 main/Batch/BatchDropPool.py
