--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@ main/Batch/BatchDropPool.py
 mina/GenerateDataAsync.py
 main/DetermineNodes_old.py
 main/DetermineNodes_test.py
+src/Batch/BatchDeleteJobs.py
+src/Batch/test.py
