--- a/config_user.toml
+++ b/config_user.toml
@@ -12,3 +12,5 @@ EventHubName = 'EVENT_HUB_NAME'
 [GeneratorInput]
 ThroughputMessagesPerSec = 100
 RunDurationMin = 10
+JsonTemplate = 'SampleJSON.toml' 
+
