--- a/SampleJSON.toml
+++ b/SampleJSON.toml
@@ -38,14 +38,14 @@ SampleJSON = '''{
   "Event": {
     "System": {
       "Provider": "",
-      "EventID": "{int}",
+      "EventID": "{integer}",
       "Version": "[0, 1, 2]",
       "Level": "[0, 1]",
-      "Task": "{int}",
+      "Task": "{integer}",
       "Opcode": "0",
-      "Keywords": "{int}",
+      "Keywords": "{integer}",
       "TimeCreated": "",
-      "EventRecordID": "{int}",
+      "EventRecordID": "{integer}",
       "Correlation": "",
       "Execution": "",
       "Channel": "Security",
@@ -60,8 +60,8 @@ SampleJSON = '''{
         "{string}",
         "{string}",
         "{string}",
-        "{int}",
-        "{int}",
+        "{integer}",
+        "{integer}",
         "C:\\Program Files\\CrowdStrike\\CSFalconService.exe"
       ]
     },
