--- a/SampleJSON.toml
+++ b/SampleJSON.toml
@@ -66,7 +66,7 @@ SampleJSON = '''{
       ]
     },
     "RenderingInfo": {
-      "Message": "{string}",
+      "Message": "{string_faker_text}",
       "Level": "Information",
       "Task": "Security Group Management",
       "Opcode": "Info",
