--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@ main/DetermineNodes_test.py
 src/Batch/BatchDeleteJobs.py
 src/Batch/test.py
 config_global_local.toml
+src/Batch/__pycache__/DetermineNodes.cpython-311.pyc
+src/DataFactory/__pycache__/PayloadFactory.cpython-311.pyc
+*.pyc
