--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ src/Batch/__pycache__/DetermineNodes.cpython-311.pyc
 src/DataFactory/__pycache__/PayloadFactory.cpython-311.pyc
 *.pyc
 src/DataFactory/__pycache__/PayloadFactory.cpython-311.pyc
+*.pyc
