--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,5 @@ src/DataFactory/__pycache__/PayloadFactory.cpython-311.pyc
 *.pyc
 src/DataFactory/__pycache__/PayloadFactory.cpython-311.pyc
 *.pyc
+src/Batch/__pycache__/DetermineNodes.cpython-311.pyc
+src/DataFactory/__pycache__/PayloadFactory.cpython-311.pyc
